--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.14.1",
+    "@tanstack/react-query-devtools": "^5.14.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.21.0",
+    "sort-by": "^1.2.0",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
